# outline-mcp-rs

./: .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  LICENCE  README.md  README.ru.md  README.zh.md  deny.toml  flake.nix  test_clean_json.sh
.cargo/: config.toml
.claude/skills/commit/: SKILL.md
.claude/skills/refactor/: SKILL.md
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml
docs/: CI_OPTIMIZATION.md  HELP.md  MACOS.md  WINDOWS_SIGNING.md
scripts/: pre-commit-check.sh  update-cargo-hash.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  outline.rs  tools.rs
src/http/: auth.rs  cors.rs  handler.rs  health.rs  mod.rs  request.rs  response.rs  router.rs  server.rs  session.rs  sse.rs
src/tools/: collections.rs  comments.rs  common.rs  documents.rs  mod.rs  users.rs
tests/common/: mod.rs
tests/e2e/: full_workflow_tests.rs
tests/integration/: http_transport_tests.rs  mcp_tests.rs
